feat: finished day 7 js

--- a/Javascript/Day7/index.html
+++ b/Javascript/Day7/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Simple Calculator</h1>
+    <label>Input number 1:</label>
+    <input id="number1"><br><br>
+    <label>Input number 2:</label>
+    <input id="number2"><br><br>
+    <button id="add">Add</button>
+    <button id="subtract">Subtract</button>
+    <button id="multiply">Multiply</button>
+    <button id="divide">Divide</button>
 </body>
 </html>
 <script src="script.js"></script>
