feat: polished day 7 js

--- a/Javascript/Day7/index.html
+++ b/Javascript/Day7/index.html
@@ -15,6 +15,9 @@
     <button id="subtract">Subtract</button>
     <button id="multiply">Multiply</button>
     <button id="divide">Divide</button>
+    <!--result for calculations-->
+    <br><br>
+    <div id="result"></div>
 </body>
 </html>
 <script src="script.js"></script>
