feat: while loop day 8 js

--- a/Javascript/Day8/index.html
+++ b/Javascript/Day8/index.html
@@ -6,15 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Summation of all Numbers</h1>
-    <label>Enter Number:</label>
-    <input id="numbersTypebox">
-    <button id="addButton">Add</button>
-    <br><br>
-    <button id="doneButton">Sum all Numbers</button>
-    <p>Enter a single number and for each number click the "Add" button and if you're done, click the "Sum All Numbers" button.</p>
-    <br><br>
-    <div id="displayTotal"></div>
+    <div id="name"></div>
 </body>
 </html>
 <script src="script.js"></script>
